--- a/en/index.html
+++ b/en/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
-<html class="no-js" lang="tr">
+<html class="no-js" lang="en">
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Yiğidosoft</title>
-    <meta name="description" content="Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Kişisel markanızı Yiğidosoft ekibimizin tasarlayacağı web sitesi sayesinde Dijital Dünya'da öne çıkaracağız.
-    Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keşfedin.">
+    <meta name="description" content="Get your first step with Yiğidosoft into the Digital World.
+    We will highlight your personal brand in the Digital World, thanks to the website designing by our Yiğidosoft team. Get your perfect website right now and discover brutal success.">
     <meta name="keywords"
-        content="yigidosoft, web tasarım, logo tasarım, web yazılım, web sitesi, sivas web tasarım, web tasarım firması, seo, one page site tasarımı, kurumsal site tasarımı, mobil uyumlu site," />
+        content="yigidosoft, web design, logo design, web software, website, sivas web design, web design firm, seo, one page site design, corporate site design, mobile compatible site," />
     <meta name="author" content="Yigidosoft" />
     <meta name="referrer" content="origin">
     <meta name="google-site-verification" content="so-WxlBBVL8anRjIkW-8oCwKqm00kbrbD0gH5HyuAMc" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../resources/img/favicon.png">
 
     <!-- Web fonts and Web Icons -->
-    <link rel="stylesheet" href="resources/fonts/opensans/stylesheet.css">
-    <link rel="stylesheet" href="resources/fonts/ionicons/ionicons.min.css">
-    <link rel="stylesheet" href="resources/fonts/fontawesome/font-awesome.min.css">
+    <link rel="stylesheet" href="../resources/fonts/opensans/stylesheet.css">
+    <link rel="stylesheet" href="../resources/fonts/ionicons/ionicons.min.css">
+    <link rel="stylesheet" href="../resources/fonts/fontawesome/font-awesome.min.css">
 
     <!-- Vendor CSS -->
-    <link rel="stylesheet" href="resources/css/bootstrap.min.css">
-    <link rel="stylesheet" href="resources/js/vendor/swiper.min.css">
-    <link rel="stylesheet" href="resources/js/vendor/jquery.fullpage.min.css">
-    <link rel="stylesheet" href="resources/js/vendor/vegas/vegas.min.css">
+    <link rel="stylesheet" href="../resources/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../resources/js/vendor/swiper.min.css">
+    <link rel="stylesheet" href="../resources/js/vendor/jquery.fullpage.min.css">
+    <link rel="stylesheet" href="../resources/js/vendor/vegas/vegas.min.css">
 
     <!-- Main CSS files -->
-    <link rel="stylesheet" href="resources/css/custom.css">
-    <link rel="stylesheet" href="resources/css/style-light.css">
+    <link rel="stylesheet" href="../resources/css/custom.css">
+    <link rel="stylesheet" href="../resources/css/style-light.css">
 
     <script type="text/javascript">
         function hover(element) {
@@ -84,19 +84,19 @@
                 <li class="nav-item" data-menuanchor="home">
                     <a href="#home">
                         <i class="icon ion-ios-home"></i>
-                        <span class="txt">Anasayfa</span>
+                        <span class="txt">Home Page</span>
                     </a>
                 </li>
                 <li class="nav-item" data-menuanchor="services">
                     <a href="#services">
                         <i class="icon ion-clipboard"></i>
-                        <span class="txt">Hizmetler</span>
+                        <span class="txt">Our Services</span>
                     </a>
                 </li>
                 <li class="nav-item" data-menuanchor="contact">
                     <a href="#contact">
                         <i class="icon ion-email"></i>
-                        <span class="txt">İletişim</span>
+                        <span class="txt">Contact Us</span>
                     </a>
                 </li>
             </ul>
@@ -130,7 +130,7 @@
                             <!-- title and description -->
                             <div class="title-desc">
                                 <span class="logo">
-                                    <img class="light-logo" src="resources/img/logo-gray.png" alt="Logo"
+                                    <img class="light-logo" src="../resources/img/logo-gray.png" alt="Logo"
                                         onmouseover="hover(this);" onmouseout="unhover(this);">
                                 </span>
                                 <div class="scroll-downs">
@@ -153,7 +153,7 @@
             <div class="section-wrapper center-vh dir-col anim">
                 <!-- title -->
                 <div class="anim-2">
-                    <h2 class="display-4 display-title mb-32">Biz Kimiz?</h2>
+                    <h2 class="display-4 display-title mb-32">Who Are We?</h2>
                 </div>
 
                 <!-- content -->
@@ -161,9 +161,9 @@
                     <div class="row">
                         <div class="col-12 col-md-12">
                             <div class="title-desc anim-2 text-center">
-                                <p>Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Yiğidosoft
-                                    ekibimizin tasarlayacağı logo tasarımları ve web sitesi tasarımları sayesinde kişisel markanızı Dijital Dünya'da öne çıkarmaya hazırız.
-                                    Hemen siz de mükemmel bir logo ve web sitesi sahibi olun ve acımasız başarıyı keşfedin.</p>
+                                <p>Get your first step with Yiğidosoft into the Digital World.
+                                    We will highlight your personal brand in the Digital World, thanks to the website designing by our Yiğidosoft team. 
+                                    Get your perfect website right now and discover brutal success.</p>
                             </div>
                         </div>
 
@@ -181,7 +181,7 @@
             <div class="section-wrapper twoside center-vh dir-col anim">
                 <!-- title -->
                 <div class="anim-2">
-                    <h2 class="display-4 display-title mb-32">Hizmetlerimiz</h2>
+                    <h2 class="display-4 display-title mb-32">Our Services</h2>
                 </div>
 
                 <!-- text or illustration order are manipulated via Bootstrap order-md-1, order-md-2 class -->
@@ -195,22 +195,21 @@
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
                                     <!-- <i class="icon icon ion-cash"></i>-->
-                                    <img src="resources/img/img1.png" />
+                                    <img src="../resources/img/img1.png" />
                                 </div>
                                 <div class="media-body">
-                                    <h4>Logo Tasarım</h4>
-                                    <p>Markanıza uygun tamamen özgün logolar tasarlayıp sizlere sunuyoruz.</p>
+                                    <h4>Logo Design</h4>
+                                    <p>We design and present completely original logos suitable for your brand.</p>
                                 </div>
                             </div>
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="resources/img/img6.png" />
+                                    <img src="../resources/img/img6.png" />
                                 </div>
                                 <div class="media-body">
-                                    <h4>Yazılım Geliştirme</h4>
-                                    <p>Web site Yazılım süreçlerinizi kurguluyor ve arama motoru dostu mobil uyumlu
-                                        siteler oluşturuyoruz.</p>
+                                    <h4>Software Development</h4>
+                                    <p>We build your website software processes and create search engine friendly mobile compatible sites.</p>
                                 </div>
                             </div>
                         </div>
@@ -224,12 +223,11 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="resources/img/img2.png" />
+                                    <img src="../resources/img/img2.png" />
                                 </div>
                                 <div class="media-body">
-                                    <h4>Sosyal Medya Yönetimi</h4>
-                                    <p>Sosyal Medya Hesaplarınızı amacına uygun tasarlıyor reklam metinlerinizi ve
-                                        kampanyalarınızı kurguluyoruz. </p>
+                                    <h4>Social Media Management</h4>
+                                    <p>We design your Social Media Accounts in accordance with their purpose, we build your advertising texts and campaigns. </p>
                                 </div>
                             </div>
 
@@ -250,7 +248,7 @@
             <div class="section-wrapper twoside">
                 <!-- title -->
                 <div class="section-title text-center">
-                    <h2 class="display-4 display-title mb-32">Projeler</h2>
+                    <h2 class="display-4 display-title mb-32">Projects</h2>
                 </div>
 
 
@@ -316,30 +314,30 @@
                                 <!-- title and description -->
                                 <div class="title-desc">
                                     <div class="anim-2">
-                                        <h2 class="display-4 display-title mb-32">Bize Ulaşın</h2>
+                                        <h2 class="display-4 display-title mb-32"> Contact Us</h2>
                                     </div>
                                     <div class="address-container anim-3">
                                         <div class="row info">
                                             <div class="col-12 col-sm-12 col-md-2 col-lg-2"></div>
 
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                                                <h5><i class="icon ion-android-call"></i> Telefon</h5>
+                                                <h5><i class="icon ion-android-call"></i> Phone</h5>
                                                 <p></p>
 
-                                                <h5><i class="icon ion-email"></i> E-Posta</h5>
+                                                <h5><i class="icon ion-email"></i> Email</h5>
                                                 <p>info@yigidosoft.com</p>
 
-                                                <h5><i class="icon ion-android-map"></i> Adres</h5>
+                                                <h5><i class="icon ion-android-map"></i> Address</h5>
                                                 <p>Sivas</p>
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                                                <p>Teklif almak ister misiniz? Size özel en uygun teklifimizi
-                                                    ihtiyaçlarınıza göre hazırlayalım.</p>
+                                                <p>Would you like to receive an offer? 
+                                                    Let us prepare the most suitable offer for you according to your needs.</p>
                                                 <!-- Action button -->
                                                 <div class="btns-action anim-4 mt-3">
                                                     <a class="btn btn-outline-white" href="#contact/message">
-                                                        <span class="txt">Şimdi Teklif Alın</span>
+                                                        <span class="txt">Get An Offer Now</span>
                                                         <i class="icon fa fa-long-arrow-right ml-2"></i>
                                                     </a>
                                                 </div>
@@ -375,8 +373,8 @@
                                 <!-- title and description -->
                                 <div class="title-desc">
                                     <div>
-                                        <h2 class="display-4 display-title">MESAJ YAZIN</h2>
-                                        <p>En kısa zamanda cevaplayacağız</p>
+                                        <h2 class="display-4 display-title">Write A Message</h2>
+                                        <p>We will reply as soon as possible</p>
                                     </div>
                                 </div>
 
@@ -393,17 +391,17 @@
                                         <form class="message form" method="post" id="formMessage" name="formMessage"
                                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse">
                                             <div class="form-group name">
-                                                <label for="fullname">İsim</label>
+                                                <label for="fullname">Name</label>
                                                 <input id="fullname" name="entry.2041403057" type="text" placeholder=""
                                                     class="form-control-line form-success-clean" required>
                                             </div>
                                             <div class="form-group email">
-                                                <label for="email">E-Posta</label>
+                                                <label for="email">Email</label>
                                                 <input id="email" type="email" placeholder="" name="emailAddress"
                                                     class="form-control-line form-success-clean" required>
                                             </div>
                                             <div class="form-group no-border">
-                                                <label for="message">Mesaj</label>
+                                                <label for="message">Message</label>
                                                 <textarea id="message" name="entry.1060635606"
                                                     class="form-control form-control-outline thick form-success-clean"
                                                     required></textarea>
@@ -419,13 +417,13 @@
                                                     class="btn btn-outline-white btn-full email_b"
                                                     name="submit_message">
                                                     <i class="icon ion-paper-airplane mr-2"></i>
-                                                    <span type="submit" class="txt">Gönder</span>
+                                                    <span type="submit" class="txt">Send</span>
                                                     <span class="arrow-icon"></span>
                                                 </button>
                                                 <a class="btn btn-transparent btn-left-hover btn-border-none text-center"
                                                     href="#contact/information">
                                                     <span class="txt"><i class="fa fa-long-arrow-left mr-2"></i>
-                                                        Bilgilere Dön</span>
+                                                        Back To Information</span>
                                                 </a>
                                             </div>
                                         </form>
@@ -447,8 +445,8 @@
     <footer id="site-footer" class="page-footer">
         <!-- Left content -->
         <div class="footer-left">
-            <a href="/en">
-                EN
+            <a href="/">
+                TR
             </a>
         </div>
         <!-- Right content -->
@@ -487,15 +485,15 @@
 
     <!-- JavaScripts -->
     <!-- jQuery -->
-    <script src="resources/js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="../resources/js/vendor/jquery-1.12.4.min.js"></script>
 
     <!-- All Vendor Scripts -->
-    <script src="resources/js/vendor/scrolloverflow.min.js"></script>
-    <script src="resources/js/vendor/all.js"></script>
-    <script src="resources/js/vendor/particlejs/particles.min.js"></script>
+    <script src="../resources/js/vendor/scrolloverflow.min.js"></script>
+    <script src="../resources/js/vendor/all.js"></script>
+    <script src="../resources/js/vendor/particlejs/particles.min.js"></script>
 
     <!-- Main Script -->
-    <script src="resources/js/custom.js"></script>
+    <script src="../resources/js/custom.js"></script>
     <script src="https://code.iconify.design/2/2.1.1/iconify.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"
@@ -508,7 +506,7 @@
                 data: extraData,
                 dataType: 'jsonp',
                 error: function () {
-                    swal('Yanıtınız Kaydedildi. Teşekkürler.')
+                    swal('Your response has been recorded. Thanks.')
                 }
             })
         })
