--- a/en/index.html
+++ b/en/index.html
@@ -37,11 +37,11 @@
 
     <script type="text/javascript">
         function hover(element) {
-            element.setAttribute('src', 'resources/img/logo.png');
+            element.setAttribute('src', '../resources/img/logo.png');
         }
 
         function unhover(element) {
-            element.setAttribute('src', 'resources/img/logo-gray.png');
+            element.setAttribute('src', '../resources/img/logo-gray.png');
         }
     </script>
 
