--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 <div class="">
                                     <div class="form-container form-container-card">
                                         <!-- Message form container -->
-                                        <form class="message form" method="post" id="formMessage" name="formMessage"
+                                        <form class="message form" method="post" id="formMessage" name="formMessage" accept-charset="utf-8"
                                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse">
                                             <div class="form-group name">
                                                 <label for="fullname">İsim</label>
