--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Yiğidosoft</title>
-    <meta name="description" content="Get your first step with Yiğidosoft into the Digital World.
+    <meta name="description"
+        content="Get your first step with Yiğidosoft into the Digital World.
     We will highlight your personal brand in the Digital World, thanks to the website designing by our Yiğidosoft team. Get your perfect website right now and discover brutal success.">
     <meta name="keywords"
         content="yigidosoft, web design, logo design, web software, website, sivas web design, web design firm, seo, one page site design, corporate site design, mobile compatible site," />
@@ -15,7 +16,7 @@
         rel="stylesheet">
     <link rel="alternate" href="https://yigidosoft.com/en" hreflang="en" />
     <meta property="og:type" content="website">
-	<meta property="og:locale" content="en_EN">
+    <meta property="og:locale" content="en_EN">
     <meta property="og:site_name" content="Yigidosoft">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../resources/img/favicon.png">
@@ -166,7 +167,8 @@
                         <div class="col-12 col-md-12">
                             <div class="title-desc anim-2 text-center">
                                 <p>Get your first step with Yiğidosoft into the Digital World.
-                                    We will highlight your personal brand in the Digital World, thanks to the website designing by our Yiğidosoft team. 
+                                    We will highlight your personal brand in the Digital World, thanks to the website
+                                    designing by our Yiğidosoft team.
                                     Get your perfect website right now and discover brutal success.</p>
                             </div>
                         </div>
@@ -213,7 +215,8 @@
                                 </div>
                                 <div class="media-body">
                                     <h4>Software Development</h4>
-                                    <p>We build your website software processes and create search engine friendly mobile compatible sites.</p>
+                                    <p>We build your website software processes and create search engine friendly mobile
+                                        compatible sites.</p>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +234,8 @@
                                 </div>
                                 <div class="media-body">
                                     <h4>Social Media Management</h4>
-                                    <p>We design your Social Media Accounts in accordance with their purpose, we build your advertising texts and campaigns. </p>
+                                    <p>We design your Social Media Accounts in accordance with their purpose, we build
+                                        your advertising texts and campaigns. </p>
                                 </div>
                             </div>
 
@@ -264,33 +268,19 @@
                             <!-- item -->
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
-                                    <div class="illustr">
-                                        <iframe class="img" width="100%" height="250" src="" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                    <div class="browser-mockup">
+                                        <div class="content"
+                                            style="background-image: url(https://i.hizliresim.com/114nbq4.png)"></div>
                                     </div>
-                                </div>
-                                <div class="item-desc">
-                                    <a class="legend" href="#">
-                                        <h2 class="display-6">Yiğidosoft</h2>
-                                        <p></p>
-                                    </a>
                                 </div>
                             </li>
                             <!-- item -->
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
-                                    <div class="illustr">
-                                        <iframe class="img" width="100%" height="250" src="" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                    <div class="browser-mockup">
+                                        <div class="content"
+                                            style="background-image: url(https://i.hizliresim.com/eevyrhz.jpg)"></div>
                                     </div>
-                                </div>
-                                <div class="item-desc">
-                                    <a class="legend" href="" target="_blank">
-                                        <h2 class="display-6">Yiğidosoft</h2>
-                                        <p></p>
-                                    </a>
                                 </div>
                             </li>
                         </ul>
@@ -336,8 +326,9 @@
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-                                                <p>Would you like to receive an offer? 
-                                                    Let us prepare the most suitable offer for you according to your needs.</p>
+                                                <p>Would you like to receive an offer?
+                                                    Let us prepare the most suitable offer for you according to your
+                                                    needs.</p>
                                                 <!-- Action button -->
                                                 <div class="btns-action anim-4 mt-3">
                                                     <a class="btn btn-outline-white" href="#contact/message">
@@ -392,7 +383,8 @@
                                 <div class="">
                                     <div class="form-container form-container-card">
                                         <!-- Message form container -->
-                                        <form class="message form" method="post" id="formMessage" name="formMessage" accept-charset="utf-8"
+                                        <form class="message form" method="post" id="formMessage" name="formMessage"
+                                            accept-charset="utf-8"
                                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse">
                                             <div class="form-group name">
                                                 <label for="fullname">Name</label>
