--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="resources/img/favicon.png">
     <meta property="og:type" content="website">
-	<meta property="og:locale" content="tr_TR">
+    <meta property="og:locale" content="tr_TR">
     <meta property="og:site_name" content="Yiğidosoft">
 
     <!-- Web fonts and Web Icons -->
@@ -165,8 +165,10 @@
                         <div class="col-12 col-md-12">
                             <div class="title-desc anim-2 text-center">
                                 <p>Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Yiğidosoft
-                                    ekibimizin tasarlayacağı logo tasarımları ve web sitesi tasarımları sayesinde kişisel markanızı Dijital Dünya'da öne çıkarmaya hazırız.
-                                    Hemen siz de mükemmel bir logo ve web sitesi sahibi olun ve acımasız başarıyı keşfedin.</p>
+                                    ekibimizin tasarlayacağı logo tasarımları ve web sitesi tasarımları sayesinde
+                                    kişisel markanızı Dijital Dünya'da öne çıkarmaya hazırız.
+                                    Hemen siz de mükemmel bir logo ve web sitesi sahibi olun ve acımasız başarıyı
+                                    keşfedin.</p>
                             </div>
                         </div>
 
@@ -265,33 +267,17 @@
                             <!-- item -->
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
-                                    <div class="illustr">
-                                        <iframe class="img" width="100%" height="250" src="" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                    <div class="browser-mockup">
+                                        <div class="content" style="background-image: url(https://i.hizliresim.com/114nbq4.png)"></div>
                                     </div>
-                                </div>
-                                <div class="item-desc">
-                                    <a class="legend" href="#">
-                                        <h2 class="display-6">Yiğidosoft</h2>
-                                        <p></p>
-                                    </a>
                                 </div>
                             </li>
                             <!-- item -->
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
-                                    <div class="illustr">
-                                        <iframe class="img" width="100%" height="250" src="" frameborder="0"
-                                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                            allowfullscreen></iframe>
+                                    <div class="browser-mockup">
+                                        <div class="content" style="background-image: url(https://i.hizliresim.com/eevyrhz.jpg)"></div>
                                     </div>
-                                </div>
-                                <div class="item-desc">
-                                    <a class="legend" href="" target="_blank">
-                                        <h2 class="display-6">Yiğidosoft</h2>
-                                        <p></p>
-                                    </a>
                                 </div>
                             </li>
                         </ul>
@@ -393,7 +379,8 @@
                                 <div class="">
                                     <div class="form-container form-container-card">
                                         <!-- Message form container -->
-                                        <form class="message form" method="post" id="formMessage" name="formMessage" accept-charset="utf-8"
+                                        <form class="message form" method="post" id="formMessage" name="formMessage"
+                                            accept-charset="utf-8"
                                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse">
                                             <div class="form-group name">
                                                 <label for="fullname">İsim</label>
