--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Kişisel markanızı Yiğidosoft ekibimizin tasarlayacağı web sitesi sayesinde Dijital Dünya'da öne çıkaracağız.
     Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keşfedin.">
     <meta name="keywords"
-        content="yigidosoft, web tasarım, logo tasarım, web yazılım, web sitesi, sivas web tasarım, web tasarım firması, seo, one page site tasarımı, kurumsal site tasarımı, mobil uyumlu site," />
+        content="yigidosoft, yiğido, yigido, sivas, web tasarım, logo tasarım, web yazılım, web sitesi, sivas web tasarım, web tasarım firması, seo, one page site tasarımı, kurumsal site tasarımı, mobil uyumlu site," />
     <meta name="author" content="Yigidosoft" />
     <meta name="referrer" content="origin">
     <meta name="google-site-verification" content="so-WxlBBVL8anRjIkW-8oCwKqm00kbrbD0gH5HyuAMc" />
