--- a/en/index.html
+++ b/en/index.html
@@ -11,6 +11,7 @@
         content="yigidosoft, web design, logo design, web software, website, sivas web design, web design firm, seo, one page site design, corporate site design, mobile compatible site," />
     <meta name="author" content="Yigidosoft" />
     <meta name="referrer" content="origin">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="so-WxlBBVL8anRjIkW-8oCwKqm00kbrbD0gH5HyuAMc" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
