--- a/en/index.html
+++ b/en/index.html
@@ -333,7 +333,7 @@
                                                 <p>info@yigidosoft.com</p>
 
                                                 <h5><i class="icon ion-android-map"></i> Address</h5>
-                                                <p>Sivas</p>
+                                                <p>Sivas / Turkey</p>
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
