--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                                                 <p>info@yigidosoft.com</p>
 
                                                 <h5><i class="icon ion-android-map"></i> Adres</h5>
-                                                <p>Sivas</p>
+                                                <p>Sivas / Türkiye</p>
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
