--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
                                     </div>
                                 </div>
                             </li>
+                            <!-- item -->
+                            <li class="slide-item swiper-slide">
+                                <div class="item-wrapper">
+                                    <div class="browser-mockup">
+                                        <div class="content" style="background-image: url(https://i.hizliresim.com/mrzp4zt.png)"></div>
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     <!-- pagination -->
