--- a/en/index.html
+++ b/en/index.html
@@ -292,7 +292,7 @@
                                 <div class="item-wrapper">
                                     <div class="browser-mockup">
                                         <div class="content"
-                                            style="background-image: url(https://i.hizliresim.com/114nbq4.png)"></div>
+                                            style="background-image: url(https://i.hizliresim.com/pe2alni.png)"></div>
                                     </div>
                                 </div>
                             </li>
