--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
                                     <div class="browser-mockup">
-                                        <div class="content" style="background-image: url(https://i.hizliresim.com/114nbq4.png)"></div>
+                                        <div class="content" style="background-image: url(https://i.hizliresim.com/pe2alni.png)"></div>
                                     </div>
                                 </div>
                             </li>
